--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
   </head>
 
   <body>
-    <conrent> </conrent>
+    <conrent> 
+          <div class="title"></div>
+          <div class="items">
+              <div class="item"></div>
+              <div class="item"></div>
+              <div class="item"></div>
+              <div class="item"></div>
+
+
+
+          </div>
+
+
+
+
+    </conrent>
+
+
+
   </body>
+
 </html>
