--- a/index.html
+++ b/index.html
@@ -15,10 +15,21 @@
               <div class="item"></div>
               <div class="item"></div>
               <div class="item"></div>
-
-
-
           </div>
+
+
+          
+          <div>
+            <p></p>
+            <p></p>
+            <p></p>
+          </div>
+
+
+
+        <div>
+        </div>
+
 
 
 
